--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-green-50 text-gray-800">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
-  <script type="module" src="/index.tsx"></script>
-</body>
+    <script type="module" src="./index.js"></script>
+  </body>
 </html>
