--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
   }
 }
 </script>
+<!-- Add Babel Standalone for in-browser JSX/TSX transformation -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
   <body class="bg-green-50 text-gray-800">
     <div id="root"></div>
-    <script type="module" src="./index.js"></script>
+    <!-- Update script type to 'text/babel' and point to the .tsx source file -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
